--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "vite": "^6.3.5"
   },
   "dependencies": {
+    "@alpinejs/collapse": "^3.14.9",
     "@tailwindcss/vite": "^4.1.7",
     "alpinejs": "^3.14.9",
     "tailwindcss": "^4.1.7"
